--- a/TS.ipynb
+++ b/TS.ipynb
@@ -18,6 +18,8 @@
    ],
    "source": [
     "\"\"\"\n",
+    "TS algorithm\n",
+    "\n",
     "k = 1\n",
     "s = initial solution\n",
     "WHILE the stopping condition is not met DO \n",
@@ -31,6 +33,64 @@
     "    k = k + 1\n",
     "END WHILE\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 讀取資料\n",
+    "def readData():\n",
+    "  data = pd.read_csv(\"data.csv\")\n",
+    "  return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "Name: Jobs, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "data=readData()\n",
+    "print(data.ix[:,\"Jobs\"])"
    ]
   },
   {
