--- a/TS.ipynb
+++ b/TS.ipynb
@@ -37,17 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,38 +60,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    1\n",
-      "1    2\n",
-      "2    3\n",
-      "3    4\n",
-      "Name: Jobs, dtype: int64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: \n",
-      ".ix is deprecated. Please use\n",
-      ".loc for label based indexing or\n",
-      ".iloc for positional indexing\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
-      "  \n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "data=readData()\n",
-    "print(data.ix[:,\"Jobs\"])"
+    "print(data.loc[:,\"Jobs\"].size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get(a):\n",
+    "    total=0\n",
+    "    b=0\n",
+    "    #for i in range(len(a)):\n",
+    "    b=a[i]\n",
+    "    total+=data.loc[b,\"Weights\"]*(np.max(data.loc[b,\"Process Time\"]-data.loc[b,\"Due Date\"],0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 3]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution=0\n",
+    "q= [x for x in range(1,data.loc[:,\"Jobs\"].size+1)]\n",
+    "random.shuffle(q)\n",
+    "t=q[:]\n",
+    "print(t)\n",
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 4, 3]\n",
+      "[1, 4, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(data.loc[:,\"Jobs\"].size-1):\n",
+    "    tmp=t[i]\n",
+    "    t[i]=t[i+1]\n",
+    "    t[i+1]=tmp\n",
+    "    b[i]=t[:]\n",
+    "    t=q[:]\n",
+    "    print(b[i])\n"
    ]
   },
   {
