--- a/TS.ipynb
+++ b/TS.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nk = 1\\ns = initial solution\\nWHILE the stopping condition is not met DO \\n    Identify N(s). (Neighbourhood set) \\n    Identify T(s,k). (Tabu set) \\n    Identify A(s,k). (Aspirant set) \\n    N(s,k) = {N(s) - T(s,k)} + A(s,k)\\n    Choose the best s’  in  N(s,k)\\n    Memorize s’ if it improves the previous best known solution\\n    s = s’. \\n    k = k + 1\\nEND WHILE\\n'"
+       "'\\nTS algorithm\\n\\nk = 1\\ns = initial solution\\nWHILE the stopping condition is not met DO \\n    Identify N(s). (Neighbourhood set) \\n    Identify T(s,k). (Tabu set) \\n    Identify A(s,k). (Aspirant set) \\n    N(s,k) = {N(s) - T(s,k)} + A(s,k)\\n    Choose the best s’  in  N(s,k)\\n    Memorize s’ if it improves the previous best known solution\\n    s = s’. \\n    k = k + 1\\nEND WHILE\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,33 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get(a):\n",
     "    total=0\n",
     "    b=0\n",
-    "    #for i in range(len(a)):\n",
-    "    b=a[i]\n",
-    "    total+=data.loc[b,\"Weights\"]*(np.max(data.loc[b,\"Process Time\"]-data.loc[b,\"Due Date\"],0))"
+    "    for i in a:\n",
+    "        total+=data.loc[i-1,\"Weights\"]*(np.max(data.loc[i-1,\"Process Time\"]+b-data.loc[i-1,\"Due Date\"],0))\n",
+    "        b+=data.loc[i-1,\"Process Time\"]\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 4, 3]\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "[1, 2, 4, 3]\n"
      ]
     }
    ],
@@ -113,35 +109,45 @@
     "q= [x for x in range(1,data.loc[:,\"Jobs\"].size+1)]\n",
     "random.shuffle(q)\n",
     "t=q[:]\n",
-    "print(t)\n",
-    "for i in range(5):\n",
-    "    print(i)"
+    "print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1, 4, 3]\n",
-      "[1, 4, 2, 3]\n",
-      "[1, 2, 3, 4]\n"
+      "500\n",
+      "100000000\n",
+      "408\n",
+      "500\n",
+      "632\n",
+      "408\n"
      ]
     }
    ],
    "source": [
-    "for i in range(data.loc[:,\"Jobs\"].size-1):\n",
+    "max=100000000\n",
+    "for i in range(data[\"Jobs\"].size-1):\n",
     "    tmp=t[i]\n",
     "    t[i]=t[i+1]\n",
     "    t[i+1]=tmp\n",
-    "    b[i]=t[:]\n",
+    "    total=get(t)\n",
     "    t=q[:]\n",
-    "    print(b[i])\n"
+    "    if max>total:\n",
+    "        max=total\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
