--- a/TS.ipynb
+++ b/TS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nTS algorithm\\n\\nk = 1\\ns = initial solution\\nWHILE the stopping condition is not met DO \\n    Identify N(s). (Neighbourhood set) \\n    Identify T(s,k). (Tabu set) \\n    Identify A(s,k). (Aspirant set) \\n    N(s,k) = {N(s) - T(s,k)} + A(s,k)\\n    Choose the best s’  in  N(s,k)\\n    Memorize s’ if it improves the previous best known solution\\n    s = s’. \\n    k = k + 1\\nEND WHILE\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,19 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 4, 3]\n"
+      "[3, 1, 2, 4]\n"
      ]
     }
    ],
    "source": [
-    "solution=0\n",
     "q= [x for x in range(1,data.loc[:,\"Jobs\"].size+1)]\n",
     "random.shuffle(q)\n",
     "t=q[:]\n",
@@ -114,32 +113,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500\n",
-      "100000000\n",
-      "408\n",
-      "500\n",
-      "632\n",
-      "408\n"
+      "662\n",
+      "[[1, 3, 2, 4], [3, 2, 1, 4], [3, 1, 4, 2]]\n",
+      "[778, 970, 878]\n",
+      "[[3, 1]]\n"
      ]
     }
    ],
    "source": [
-    "max=100000000\n",
+    "solution=get(t)\n",
+    "a=[]\n",
+    "b=[]\n",
+    "tabu=[]\n",
+    "remove=[]\n",
     "for i in range(data[\"Jobs\"].size-1):\n",
     "    tmp=t[i]\n",
     "    t[i]=t[i+1]\n",
     "    t[i+1]=tmp\n",
-    "    total=get(t)\n",
+    "    a.append(t)\n",
     "    t=q[:]\n",
-    "    if max>total:\n",
-    "        max=total\n"
+    "for i in a:\n",
+    "    b.append(get(i))\n",
+    "for ta in tabu:\n",
+    "    for i in a:\n",
+    "        for j in range(0,4):\n",
+    "            if i[j]==ta[0] and i[j+1]==ta[1]:\n",
+    "                remove.append(a.index(i))\n",
+    "for i in remove:\n",
+    "    a.remove(a[index])\n",
+    "    b.remove(b[index])\n",
+    "print(max)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "indexnum=min(b)\n",
+    "index=b.index(indexnum)\n",
+    "if len(tabu)==2:\n",
+    "    tabu.remove(tabu[1])\n",
+    "    tabu.append([t[index],t[index+1]])\n",
+    "else:\n",
+    "    tabu.append([t[index],t[index+1]])\n",
+    "print(tabu)\n",
+    "t=a[index]"
    ]
   },
   {
